k8s-manifests/backend-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-gateway
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: backend-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-gateway-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-gateway
  template:
    metadata:
      labels:
        app: backend-gateway
    spec:
      containers:
        - name: backend-gateway
          image: backend-gateway:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
