k8s-manifests/inscription-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inscription-service
  namespace: default
spec:
  ports:
    - port: 3002
      targetPort: 3002
  selector:
    app: inscription-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inscription-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inscription-service
  template:
    metadata:
      labels:
        app: inscription-service
    spec:
      containers:
        - name: inscription-service
          image: inscription-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
