k8s-manifests/postgres-notification.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-postgres-service
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: notification-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-postgres-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-postgres
  template:
    metadata:
      labels:
        app: notification-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: notification-postgres-pvc
